# kyaddmodule

./: LICENSE  README.md  kyaddmodule.cabal
app/: Main.hs
src/Kyarigwo/: AddModule.hs
test/Kyarigwo/: AddModuleSpec.hs
testdir/: template.amtemplate
